@@ -55,6 +55,9 @@ New features added
     the directive -- this allows you to define your document
     structure, but place the links yourself.
 
+  - #123: The ``glossary`` directive now supports a ``:sorted:``
+    flag that sorts glossary entries alphabetically.
+
   - Paths to images, literal include files and download files
     can now be absolute (like ``/images/foo.png``).  They are
     treated as relative to the top source directory.
